[v0.2.6-alpha] Optimización y Refactorización